globus-ftp-control (8.3-2+gt6.@distro@) @distro@; urgency=low

  * Add dependency on libltdl-dev

 -- Globus Toolkit <support@globus.org>  Mon, 09 Apr 2018 11:03:50 -0400

globus-ftp-control (8.3-1+gt6.@distro@) @distro@; urgency=low

  * Default to host authz when using tls control channel

 -- Globus Toolkit <support@globus.org>  Wed, 28 Mar 2018 21:40:04 +0000

globus-ftp-control (8.2-1+gt6.@distro@) @distro@; urgency=low

  * fix leak

 -- Globus Toolkit <support@globus.org>  Fri, 22 Sep 2017 16:16:59 -0400

globus-ftp-control (8.1-1+gt6.@distro@) @distro@; urgency=low

  * reading when eof will result in callback indicating eof instead of error

 -- Globus Toolkit <support@globus.org>  Fri, 22 Sep 2017 11:38:32 -0500

globus-ftp-control (8.0-1+gt6.@distro@) @distro@; urgency=low

  * Add function globus_ftp_control_use_tls() for TLS control channel

 -- Globus Toolkit <support@globus.org>  Tue, 05 Sep 2017 14:42:01 -0400

globus-ftp-control (7.8-1+gt6.@distro@) @distro@; urgency=low

  * fix hang/failure when using udt driver with local client transfer

 -- Globus Toolkit <support@globus.org>  Fri, 30 Jun 2017 12:18:20 -0500

globus-ftp-control (7.7-1+gt6.@distro@) @distro@; urgency=low

  * more ordered mode fixes

 -- Globus Toolkit <support@globus.org>  Tue, 11 Oct 2016 10:29:56 -0500

globus-ftp-control (7.6-1+gt6.@distro@) @distro@; urgency=low

  * improve forced ordering

 -- Globus Toolkit <support@globus.org>  Tue, 04 Oct 2016 07:49:00 -0500

globus-ftp-control (7.5-1+gt6.@distro@) @distro@; urgency=low

  * Update for el.5 openssl101e

 -- Globus Toolkit <support@globus.org>  Thu, 08 Sep 2016 15:43:07 -0400

globus-ftp-control (7.4-1+gt6.@distro@) @distro@; urgency=low

  * Makefile fix

 -- Globus Toolkit <support@globus.org>  Thu, 18 Aug 2016 16:09:14 -0400

globus-ftp-control (7.3-1+gt6.@distro@) @distro@; urgency=low

  * Updates for OpenSSL 1.1.0

 -- Globus Toolkit <support@globus.org>  Tue, 16 Aug 2016 15:46:26 -0400
