@@ -6,7 +6,7 @@ Name:		globus-ftp-control
 %global apache_license ASL 2.0
 %endif
 %global _name %(tr - _ <<< %{name})
-Version:	8.3
+Version:	8.4
 Release:	1%{?dist}
 Vendor:	Globus Support
 Summary:	Globus Toolkit - GridFTP Control Library
@@ -176,6 +176,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man3/*
 
 %changelog
+* Fri Jun 22 2018 Globus Toolkit <support@globus.org> - 8.4-1
+- check for missing signing policy req flag
+
 * Wed Mar 28 2018 Globus Toolkit <support@globus.org> - 8.3-1
 - Default to host authz when using tls control channel
 
