@@ -1,3 +1,9 @@
+globus-ftp-control (8.4-1+gt6.@distro@) @distro@; urgency=low
+
+  * check for missing signing policy req flag
+
+ -- Globus Toolkit <support@globus.org>  Fri, 22 Jun 2018 11:40:55 -0500
+
 globus-ftp-control (8.3-2+gt6.@distro@) @distro@; urgency=low
 
   * Add dependency on libltdl-dev
